Lecture 182, Locial Clone Part 7

--- a/Project-1/familytree/community/templates/community/community_base.html
+++ b/Project-1/familytree/community/templates/community/community_base.html
@@ -3,9 +3,9 @@
 
 <div class="container">
   <div class="row">
-    {% block pregroup %}{% endblock %}
-    {% block group_content %}{% endblock %}
-    {% block postgroup %}{% endblock %}
+    {% block precommunity %}{% endblock %}
+    {% block community_content %}{% endblock %}
+    {% block postcommunity %}{% endblock %}
   </div>
 </div>
 
