--- a/Project-1/familytree/community/templates/community/community_list.html
+++ b/Project-1/familytree/community/templates/community/community_list.html
@@ -1,38 +1,38 @@
-{% extends "groups/group_base.html" %}
+{% extends "community/community_base.html" %}
 
-{% block pregroup %}
+{% block precommunity %}
 <div class="col-md-4">
 	<div class="content">
 		{% if user.is_authenticated %}
 		<h2>
 			Welcome back
-			<a href="{% url 'posts:for_user' username=user.username %}">@{{user.username }}</a>
+			<a href="{% url 'member:for_user' username=user.username %}">@{{user.username }}</a>
 		</h2>
 
     {% endif %}
-			<h2>Groups</h2>
+			<h2>Community</h2>
 
-			<p>Welcome to the Groups Page! <br>Select a Group with a shared interest!</p>
+			<p>Welcome to the Community Page! <br>Select a Community with a shared interest!</p>
 	</div>
 	{% if user.is_authenticated %}
-	<a href="{% url 'groups:create' %}" class="btn btn-warning" role="button"><span class="fa fa-plus"></span> Create New Group!</a>
+	<a href="{% url 'community:create' %}" class="btn btn-warning" role="button"><span class="fa fa-plus"></span> Create New Community!</a>
 	{% endif %}
 </div>
 {% endblock %}
 
-{% block group_content %}
+{% block community_content %}
 <div class="col-md-8">
 	<div class="list-group">
-		{% for group in object_list %}
-		<a href="{% url 'groups:single' slug=group.slug %}"
+		{% for community in object_list %}
+		<a href="{% url 'community:single' slug=community.slug %}"
 		class="list-group-item list-group-item-action flex-column align-items-start">
-			<h3 class="mb-1">{{ group.name }}</h3>
-			<p class="mb-1">{{ group.description_html|safe }}</p>
+			<h3 class="mb-1">{{ community.name }}</h3>
+			<p class="mb-1">{{ community.description_html|safe }}</p>
 			<div class="d-flex w-40 justify-content-between">
 				<small class="text-muted"><span class="badge badge-secondary">
-					{{ group.members.count }}</span> member{{ group.members.count|pluralize }}</small>
+					{{ community.members.count }}</span> member{{ community.members.count|pluralize }}</small>
 				<small class="text-muted"><span class="badge badge-secondary">
-					{{ group.posts.count }}</span> post{{ group.posts.count|pluralize }}</small>
+					{{ community.member.count }}</span> member{{ community.member.count|pluralize }}</small>
 			<span></span><span></span>
 			</div>
 		</a>
