--- a/Project-1/familytree/member/templates/member/member_base.html
+++ b/Project-1/familytree/member/templates/member/member_base.html
@@ -3,9 +3,9 @@
 {% block content %}
 <div class="posts-page">
 	<div class="container">
-		{% block prepost %}{% endblock %}
-		{% block post_content %}{% endblock %}
-		{% block post_post %}{% endblock %}
+		{% block premember %}{% endblock %}
+		{% block member_content %}{% endblock %}
+		{% block post_member %}{% endblock %}
 	</div>
 </div>
 {% endblock %}
