--- a/Project-1/familytree/member/templates/member/member_confirm_delete.html
+++ b/Project-1/familytree/member/templates/member/member_confirm_delete.html
@@ -1,16 +1,16 @@
-{% extends "posts/post_base.html" %}
+{% extends "member/member_base.html" %}
 
 {% block post_content %}
-<h3>Are you sure you want to delete this post?</h3>
+<h3>Are you sure you want to delete this member?</h3>
 
 <div class="posts">
-	{% include "posts/_post.html" with post=object hide_delete=True %}
+	{% include "member/_member.html" with member=object hide_delete=True %}
 </div>
 
 <form method="POST">
 	{% csrf_token %}
 	<input type="submit" value="Confirm Delete" class="btn btn-danger btn-large">
-	<a href="{% url 'posts:single' username=user.username pk=object.pk %}" class="btn btn-light btn-large">Cancel</a>
+	<a href="{% url 'member:single' username=user.username pk=object.pk %}" class="btn btn-light btn-large">Cancel</a>
 </form>
 
 {% endblock %}
