--- a/Project-1/familytree/member/templates/member/member_detail.html
+++ b/Project-1/familytree/member/templates/member/member_detail.html
@@ -1,7 +1,7 @@
-{% extends "posts/post_base.html" %}
+{% extends "member/member_base.html" %}
 
-{% block post_content %}
+{% block member_content %}
 <!-- <div class="col-md-8"> -->
-    {% include "posts/_post.html" %}
+    {% include "member/_member.html" %}
 <!-- </div> -->
 {% endblock %}
