--- a/Project-1/familytree/member/templates/member/member_form.html
+++ b/Project-1/familytree/member/templates/member/member_form.html
@@ -1,14 +1,14 @@
-{% extends "posts/post_base.html" %}
+{% extends "community/community_base.html" %}
 
 {% load bootstrap4 %}
 
-{% block post_content %}
-<h4>Create New Post</h4>
-<form method="POST" action="{% url 'posts:create' %}" id="postForm">
+{% block member_content %}
+<h4>Create New Member</h4>
+<form method="POST" action="{% url 'member:create' %}" id="postForm">
 	{% csrf_token %}
 	{% bootstrap_form form %}
 	{% buttons %}
-		<button type="submit" class="btn btn-primary btn-large">Post</button>
+		<button type="submit" class="btn btn-primary btn-large">Member</button>
 	{% endbuttons %}
 </form>
 {% endblock %}
