--- a/Project-1/familytree/member/templates/member/member_list.html
+++ b/Project-1/familytree/member/templates/member/member_list.html
@@ -1,17 +1,17 @@
-{% extends "posts/post_base.html" %}
+{% extends "member/member_base.html" %}
 {% load humanize %}
 
-{% block pre_post_content %}
+{% block pre_member_content %}
 <div class="col-md-4">
 	{% if request.user.is_authenticated %}
 	<div class="card card-with-shadow">
 		<div class="content">
-			<h5 class="title">Your Groups</h5>
+			<h5 class="title">Your Communities</h5>
 			<ul class="list-unstyled">
 
-				{% for member_group in get_user_groups %}
+				{% for member_community in get_user_groups %}
 				<li class="group li-with-bullet">
-					<a href="{% url 'groups:single' slug=member_group.group.slug %}">{{ member_group.group.name }}</a>
+					<a href="{% url 'community:single' slug=member_community.community.slug %}">{{ member_group.group.name }}</a>
 				</li>
 				{% endfor %}
 
@@ -25,7 +25,7 @@
 			<ul class="list-unstyled">
 				{# {% get_other_groups as other_groups %} #}
 				{% for other_group in get_other_groups %}
-					<li class="group li-with-bullet"><a href="{% url 'groups:single' slug=other_group.slug %}">{{ other_group.name }}</a></li>
+					<li class="group li-with-bullet"><a href="{% url 'community:single' slug=other_group.slug %}">{{ other_group.name }}</a></li>
 				{% endfor %}
 			</ul>
 
@@ -33,10 +33,10 @@
 	</div>
 </div>
 {% endblock %}
-{% block post_content %}
+{% block member_content %}
 <div class="col-md-8">
-	{% for post in post_list %}
-  {% include "posts/_post.html" %}
+	{% for member in member_list %}
+  {% include "member/_member.html" %}
 	{% endfor %}
 </div>
 {% endblock %}
