--- a/Project-1/familytree/member/templates/member/user_member_list.html
+++ b/Project-1/familytree/member/templates/member/user_member_list.html
@@ -1,16 +1,16 @@
-{% extends "posts/post_base.html" %}
+{% extends "member/member_base.html" %}
 
-{% block prepost %}
+{% block premember %}
 <div class="col-md-4">
-	<h1>@{{ post_user.username }}</h1>
-	<p>Post History</p>
+	<h1>@{{ member_user.username }}</h1>
+	<p>Member History</p>
 </div>
 {% endblock %}
 
-{% block post_content %}
+{% block member_content %}
 <div class="col-md-8">
-	{% for post in post_list %}
-		{% include "posts/_post.html" %}
+	{% for member in member_list %}
+		{% include "member/_member.html" %}
 	{% endfor %}
 </div>
 {% endblock %}
