--- a/Project-1/familytree/templates/base.html
+++ b/Project-1/familytree/templates/base.html
@@ -28,8 +28,12 @@
         </div>
         <div class="navbar-nav ml-auto">
           {% if user.is_authenticated %}
+            <a class="nav-item nav-link" href="{% url 'member:create' %}" class="btn btn-simple">Member</a>
+            <a class="nav-item nav-link" href="{% url 'community:all' %}" class="btn btn-simple">Community</a>
+            <a class="nav-item nav-link" href="{% url 'community:create' %}" class="btn btn-simple">Create Community</a>
             <a class="nav-item nav-link" href="{% url 'accounts:logout' %}" class="btn btn-simple">Log out</a>
           {% else %}
+            <a class="nav-item nav-link" href="{% url 'community:all' %}" class="btn btn-simple">Community</a>
             <a class="nav-item nav-link" href="{% url 'accounts:login' %}" class="btn btn-simple">Log in</a>
             <a class="nav-item nav-link" href="{% url 'accounts:signup' %}" class="btn btn-simple">Sign up</a>
           {% endif %}
