--- a/Project-1/familytree/community/templates/community/community_detail.html
+++ b/Project-1/familytree/community/templates/community/community_detail.html
@@ -9,7 +9,7 @@
   	{% if user in community.members.all %}
   		<a href="{% url 'community:leave' slug=community.slug %}" class="btn btn-lg btn-warning"><span class="fa fa-times-circle-o"></span> Leave</a>
   	{% else %}
-  		<a href="{% url 'community:join' slug=group.slug %}" class="btn btn-lg btn-warning"><span class="fa fa-check-circle-o"></span> Join</a>
+  		<a href="{% url 'community:join' slug=community.slug %}" class="btn btn-lg btn-warning"><span class="fa fa-check-circle-o"></span> Join</a>
   	{% endif %}
 
   </div>
