--- a/Project-1/familytree/member/templates/member/member_confirm_delete.html
+++ b/Project-1/familytree/member/templates/member/member_confirm_delete.html
@@ -10,7 +10,9 @@
 <form method="POST">
 	{% csrf_token %}
 	<input type="submit" value="Confirm Delete" class="btn btn-danger btn-large">
-	<a href="{% url 'member:single' username=user.username pk=object.pk %}" class="btn btn-light btn-large">Cancel</a>
+	<a href="{% url 'member:single' username=user.username pk=object.pk %}" class="btn btn-light btn-large">
+		Cancel
+	</a>
 </form>
 
 {% endblock %}
