--- a/Project-1/familytree/member/templates/member/member_base.html
+++ b/Project-1/familytree/member/templates/member/member_base.html
@@ -5,7 +5,7 @@
 	<div class="container">
 		{% block premember %}{% endblock %}
 		{% block member_content %}{% endblock %}
-		{% block post_member %}{% endblock %}
+		{% block member_member %}{% endblock %}
 	</div>
 </div>
 {% endblock %}
